# emby_webhooks_app

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
static/: manifest.json
templates/: index.html
