[project]
name = "emby-webhooks-app"
version = "0.2.0"
description = "Простое приложение для получения уведомлений от сервера Emby и отображения их в браузере"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.118.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.37.0",
]
